created testcode for constelation lines

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>ConstelationJS - Kevin Breurken</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="Vendors/pts.min.js"></script>
-    <script type="text/javascript" src="Scripts/constelation.js" defer></script>
     <link rel="stylesheet" href="Content/CSS/default.css">
 </head>
 <body>
 <canvas id='space'></canvas>
 </body>
+<script type="text/javascript" src="Scripts/constelation.js"></script>
 </html>
